--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Fotos - Vitplay - Protótipo</title>
+	<title>Santander</title>
 	
 	<link href="fonts/dystopian.css" rel="stylesheet">
 	<link rel="icon" type="image/x-icon"
