--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 	<title>Santander</title>
 	<link href="fonts/dystopian.css" rel="stylesheet">
 	<link rel="icon" type="image/x-icon" href="/favicon.png">
+
+	<link rel="stylesheet" type="text/css" href="css/component.css" />
+	<link rel="stylesheet" type="text/css" href="css/content.css" />
+	
 	<style>
+		* {
+			user-select: none;
+		}
+
 		body {
 			margin: 0;
 			background-color: #fe0002;
@@ -40,10 +48,60 @@
 			opacity: 0;
 			pointer-events: none;
 		}
+
+		/* Botão inicial */
+.botao {
+  width: 200px;
+  height: 50px;
+  background-color: #ccc;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 8px;
+  cursor: pointer;
+  z-index: 10;
+  line-height: 1em !important;
+}
+/* Conteúdo da tela */
+.conteudo {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  z-index: 5;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  font-size: 1.5em;
+  text-align: center;
+  flex-direction: column;
+  border: none;
+}
+
+/* Botão para fechar com estilo */
+.fechar {
+  border: 1px solid #333;
+  color: #333;
+  cursor: pointer;
+  font-size: 20px;
+  padding: 10px;
+  position: absolute;
+  top: 34px;
+  right: -85px;
+  z-index: 999999;
+  border-radius: 5px;
+  display: none;
+}
+
 	</style>
 	<link rel="stylesheet" type="text/css" href="css/splitting.css" />
 	<link rel="stylesheet" type="text/css" href="css/splitting-cells.css" />
 	<link rel="stylesheet" type="text/css" href="css/prototipoContatos.css" />
+	
 	<script src="js/modernizr.custom.js"></script>
 	<script src="js/vitplay/console.js"></script>
 	<script src="js/vitplay/dolar.js"></script>
@@ -57,6 +115,9 @@
 	<script src="/js/splitting.js"></script>
 	<script src='js/AnticipateEase.min.js'></script>
 	<script src="js/prototipoContatos.js" type="module"></script>
+
+	<script src="js/classie.js"></script>
+	<script src="js/uiMorphingButton_fixed.js"></script>
 
 	<script>
 		function enterFullscreen() {
@@ -77,12 +138,26 @@
 
 <body>
 
+	<div class="frame" style="visibility: hidden;">
+		<div class="frame__title-wrap">
+			<img src="img/santander.jpg" style="width:50px;height:50px;margin-right: 10px;">
+			<h1 class="frame__title">Process Pass / COE-BR / Sprint 07</h1>
+		</div>
+		<div class="frame__links">
+			<a href="#">GITHUB Project</a>
+			<a href="#">Project DOC</a>
+		</div>
+	</div>
+
 	<video onclick="enterFullscreen()" id="video" autoplay muted poster="video/poster.jpg">
 		<source src="video/santander2.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>
 	<div class="overlay" id="overlay">
 	</div>
+
+
+
 
 	<main style="visibility: hidden;">
 		<div class="contentContatos">
@@ -138,8 +213,10 @@
 						</ul>
 
 						</p>
-						<button class="preview__item-info unbutton">+ Info</button>
-						<button class="preview__item-button">Activities</button>
+						<!-- <button class="preview__item-info unbutton">+ Info</button> -->
+						 <div class="preview__item-button botao">Activities</div>
+						<button class="fechar">X</button>
+
 					</div>
 				</div>
 				<div class="preview__item" id="preview-2">
@@ -160,8 +237,9 @@
 						</ul>
 
 						</p>
-						<button class="preview__item-info unbutton">+ Info</button>
-						<button class="preview__item-button">Activities</button>
+						<!-- <button class="preview__item-info unbutton">+ Info</button> -->
+						 <div class="preview__item-button botao">Activities</div>
+						<button class="fechar">X</button>
 					</div>
 				</div>
 				<div class="preview__item" id="preview-3">
@@ -182,8 +260,9 @@
 						</ul>
 
 						</p>
-						<button class="preview__item-info unbutton">+ Info</button>
-						<button class="preview__item-button">Activities</button>
+						<!-- <button class="preview__item-info unbutton">+ Info</button> -->
+						 <div class="preview__item-button botao">Activities</div>
+						<button class="fechar">X</button>
 					</div>
 				</div>
 				<div class="preview__item" id="preview-4">
@@ -203,8 +282,9 @@
 						</ul>
 
 						</p>
-						<button class="preview__item-info unbutton">+ Info</button>
-						<button class="preview__item-button">Activities</button>
+						<!-- <button class="preview__item-info unbutton">+ Info</button> -->
+						 <div class="preview__item-button botao">Activities</div>
+						<button class="fechar">X</button>
 					</div>
 				</div>
 				<div class="preview__item" id="preview-5">
@@ -224,8 +304,9 @@
 						</ul>
 
 						</p>
-						<button class="preview__item-info unbutton">+ Info</button>
-						<button class="preview__item-button">Activities</button>
+						<!-- <button class="preview__item-info unbutton">+ Info</button> -->
+						 <div class="preview__item-button botao">Activities</div>
+						<button class="fechar">X</button>
 					</div>
 				</div>
 				<div class="preview__item" id="preview-6">
@@ -246,8 +327,9 @@
 						</ul>
 
 						</p>
-						<button class="preview__item-info unbutton">+ Info</button>
-						<button class="preview__item-button">Activities</button>
+						<!-- <button class="preview__item-info unbutton">+ Info</button> -->
+						 <div class="preview__item-button botao">Activities</div>
+						<button class="fechar">X</button>
 					</div>
 				</div>
 				<div class="preview__item" id="preview-7">
@@ -267,8 +349,9 @@
 						</ul>
 
 						</p>
-						<button class="preview__item-info unbutton">+ Info</button>
-						<button class="preview__item-button">Activities</button>
+						<!-- <button class="preview__item-info unbutton">+ Info</button> -->
+						 <div class="preview__item-button botao">Activities</div>
+						<button class="fechar">X</button>
 					</div>
 				</div>
 				<div class="preview__item" id="preview-8">
@@ -289,8 +372,9 @@
 						</ul>
 
 						</p>
-						<button class="preview__item-info unbutton">+ Info</button>
-						<button class="preview__item-button">Activities</button>
+						<!-- <button class="preview__item-info unbutton">+ Info</button> -->
+						 <div class="preview__item-button botao">Activities</div>
+						<button class="fechar">X</button>
 					</div>
 				</div>
 				<div class="preview__item" id="preview-9">
@@ -311,8 +395,9 @@
 						</ul>
 
 						</p>
-						<button class="preview__item-info unbutton">+ Info</button>
-						<button class="preview__item-button">Activities</button>
+						<!-- <button class="preview__item-info unbutton">+ Info</button> -->
+						 <div class="preview__item-button botao">Activities</div>
+						<button class="fechar">X</button>
 					</div>
 				</div>
 				<div class="preview__item" id="preview-10">
@@ -333,8 +418,9 @@
 						</ul>
 
 						</p>
-						<button class="preview__item-info unbutton">+ Info</button>
-						<button class="preview__item-button">Activities</button>
+						<!-- <button class="preview__item-info unbutton">+ Info</button> -->
+						 <div class="preview__item-button botao">Activities</div>
+						<button class="fechar">X</button>
 					</div>
 				</div>
 				<div class="preview__item" id="preview-11">
@@ -355,8 +441,9 @@
 						</ul>
 
 						</p>
-						<button class="preview__item-info unbutton">+ Info</button>
-						<button class="preview__item-button">Activities</button>
+						<!-- <button class="preview__item-info unbutton">+ Info</button> -->
+						 <div class="preview__item-button botao">Activities</div>
+						<button class="fechar">X</button>
 					</div>
 				</div>
 				<div class="preview__item" id="preview-12">
@@ -377,8 +464,9 @@
 						</ul>
 
 						</p>
-						<button class="preview__item-info unbutton">+ Info</button>
-						<button class="preview__item-button">Activities</button>
+						<!-- <button class="preview__item-info unbutton">+ Info</button> -->
+						 <div class="preview__item-button botao">Activities</div>
+						<button class="fechar">X</button>
 					</div>
 				</div>
 				<div class="preview__item" id="preview-13">
@@ -399,8 +487,9 @@
 						</ul>
 
 						</p>
-						<button class="preview__item-info unbutton">+ Info</button>
-						<button class="preview__item-button">Activities</button>
+						<!-- <button class="preview__item-info unbutton">+ Info</button> -->
+						 <div class="preview__item-button botao">Activities</div>
+						<button class="fechar">X</button>
 					</div>
 				</div>
 				<div class="preview__item" id="preview-14">
@@ -421,8 +510,9 @@
 						</ul>
 
 						</p>
-						<button class="preview__item-info unbutton">+ Info</button>
-						<button class="preview__item-button">Activities</button>
+						<!-- <button class="preview__item-info unbutton">+ Info</button> -->
+						 <div class="preview__item-button botao">Activities</div>
+						<button class="fechar">X</button>
 					</div>
 				</div>
 				<div class="preview__item" id="preview-15">
@@ -443,8 +533,9 @@
 						</ul>
 
 						</p>
-						<button class="preview__item-info unbutton">+ Info</button>
-						<button class="preview__item-button">Activities</button>
+						<!-- <button class="preview__item-info unbutton">+ Info</button> -->
+						 <div class="preview__item-button botao">Activities</div>
+						<button class="fechar">X</button>
 					</div>
 				</div>
 				<div class="preview__item" id="preview-16">
@@ -465,8 +556,9 @@
 						</ul>
 
 						</p>
-						<button class="preview__item-info unbutton">+ Info</button>
-						<button class="preview__item-button">Activities</button>
+						<!-- <button class="preview__item-info unbutton">+ Info</button> -->
+						 <div class="preview__item-button botao">Activities</div>
+						<button class="fechar">X</button>
 					</div>
 				</div>
 			</div>
